sandbox-postgresql.yaml
apiVersion: v1
kind: Service
metadata:
  name: on-prem-sandbox-postgresql
  namespace: default
  labels:
    app: on-prem-sandbox-postgresql
spec:
  type: ClusterIP
  selector:
    app: on-prem-sandbox-postgresql
  ports:
  - port: 5432
    targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: on-prem-sandbox-postgresql
  namespace: default
spec:
  serviceName: on-prem-sandbox-postgresql
  selector:
    matchLabels:
      app: on-prem-sandbox-postgresql
  replicas: 1
  template:
    metadata:
      labels:
        app: on-prem-sandbox-postgresql
    spec:
      containers:
      - name: postgresql
        image: maxkadyshev/sandbox:14.6
        volumeMounts:
          - name: on-prem-sandbox-postgresql
            mountPath: /data/pgdata
      volumes:
      - name: s
        persistentVolumeClaim:
          claimName: on-prem-sandbox-postgresql
