ingress.tpl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
  name: ${INGRESS_NAME}
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: ${INGRESS_NAME}.${CLUSTER_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: ${SERVICE_NAME}
                port:
                  number: ${SERVICE_PORT}
            path: /
            pathType: Prefix
